[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-data-registry"
version = "0.1.0"
description = "Brain dataset registry and ingestion control plane"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Neural Data Registry Team" }
]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.35",
  "typer>=0.12.5",
  "rich>=13.9.0",
  "uvicorn>=0.31.0"
]

[project.optional-dependencies]
download = [
  "datalad>=1.0.0",
  "git-annex>=10.20230126"
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0"
]

[project.scripts]
brainctl = "neural_data_registry.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]